Development (#3)
* add pagination

* error handler

* update error response

* idexing and error hadling

* add swagger

* add swagger

* validation (wip)

* error 400 handling (wip)

* create user with validation error and stuff
